--- a/assets/scss/_colors.scss
+++ b/assets/scss/_colors.scss
@@ -3,3 +3,4 @@ $khaki-x-11-light-khaki: #e8e288ff;
 $mantis: #7dce82ff;
 $medium-turquoise: #3cdbd3ff;
 $turquoise-blue: #00fff5ff;
+$color6: rgb(250, 177, 156);
