--- a/assets/scss/_buttons.scss
+++ b/assets/scss/_buttons.scss
@@ -1,6 +1,13 @@
-button {
+nav button {
   padding: 0.4em 1.5em;
   background-color: $coral;
   border-radius: 10px;
   border: none;
+}
+
+main button {
+  padding: 0.5em 2em;
+  border-radius: 50px;
+  border: 2px solid $medium-turquoise;
+  background-color: $turquoise-blue;
 }
