--- a/assets/scss/style.css
+++ b/assets/scss/style.css
@@ -10,11 +10,18 @@ ul {
   list-style-type: none;
 }
 
-button {
+nav button {
   padding: 0.4em 1.5em;
   background-color: #ff8360;
   border-radius: 10px;
   border: none;
+}
+
+main button {
+  padding: 0.5em 2em;
+  border-radius: 50px;
+  border: 2px solid #3cdbd3;
+  background-color: #00fff5;
 }
 
 header nav img {
@@ -45,4 +52,59 @@ nav ul li:hover {
 
 nav input {
   height: 20px;
+}
+
+header {
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+}
+
+main {
+  padding: 100px;
+  background-color: rgb(250, 177, 156);
+}
+
+main img {
+  width: 150px;
+  height: 250px;
+  padding-right: 2em;
+}
+
+main article {
+  display: flex;
+  align-items: center;
+}
+
+main article div {
+  width: 200px;
+}
+
+main section div img {
+  width: 300px;
+  height: 400px;
+}
+
+main section div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+main aside {
+  display: flex;
+  justify-content: space-between;
+}
+
+main aside div {
+  display: flex;
+  width: 30%;
+}
+
+footer {
+  background-color: #e8e288;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }/*# sourceMappingURL=style.css.map */
